Waiting for footer changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="nav container">
         <a href="" class="navL">
           <img src="img/favicon.png" alt="favicon" class="navL-img" />
-          Nube
+          TCERServer
         </a>
 
         <div class="navM" id="nav-menu">
@@ -33,7 +33,7 @@
               <a href="#about" class="navLink"> Nosotros </a>
             </li>
             <li class="navItem">
-              <a href="#product" class="navLink"> Productos </a>
+              <a href="#product" class="navLink"> Proximamente </a>
             </li>
             <li class="navItem">
               <a href="#new" class="navLink"> Nuevos </a>
@@ -62,16 +62,15 @@
             <section>
               <div class="homecont grid">
                 <div class="homedata">
-                  <h1 class="hometitle">LOREM <br />INSUM <br />LOREM!!</h1>
+                  <h1 class="hometitle">TCER <br />Server</h1>
                   <p class="homedes">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                    Vitae eius placeat molestiae vel pariatur numquam minus
-                    aperiam, dolorum nostrum animi, iure doloremque sit
-                    distinctio est a, voluptatem asperiores accusamus aliquam.
+		  	Bienvenido a TCER Server, somos una startup de tecnología.
+			TCER Server tiene servicios de backend, instalación y mantenimiento de servidores,
+			cloud computing, redes y software para varios sectores.
                   </p>
                   <div class="homebut">
-                    <a href="#" class="button">Servicio</a>
-                    <a href="#" class="button">Productos</a>
+                    <a href="#" class="button">Servicios</a>
+                    <a href="#product" class="button">Productos</a>
                   </div>
                 </div>
 
@@ -88,31 +87,31 @@
       <section class="section category">
         <h2 class="sectiontitle">
           Las mejores <br />
-          Categorias
+          Categorías
         </h2>
 
         <div class="categorycontainer container grid">
           <div class="categorydata">
             <img src="img/categoria1.png" alt="" />
-            <h3 class="categorytitle">Lorem</h3>
+            <h3 class="categorytitle">Analítica</h3>
             <p class="categorydescription">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+	    	Analítica y contabilidad en la nube para su negocio.
             </p>
           </div>
 
           <div class="categorydata">
             <img src="img/categoria2.png" alt="" />
-            <h3 class="categorytitle">Lorem</h3>
+            <h3 class="categorytitle">Infraestructura</h3>
             <p class="categorydescription">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+	    	Infraestructura para su compañía, las mejores tecnologías para usted.
             </p>
           </div>
 
           <div class="categorydata">
             <img src="img/categoria3.png" alt="" />
-            <h3 class="categorytitle">Lorem</h3>
+            <h3 class="categorytitle">Portabilidad</h3>
             <p class="categorydescription">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+	    	Administre su negocio desde cualquier lugar con nuestro ecosistema.
             </p>
           </div>
         </div>
@@ -123,24 +122,24 @@
         <div class="aboutcontainer container grid">
           <img src="img/about-img.png" alt="" class="aboutimg" />
           <div class="aboutdata">
-            <h2 class="sectiontitle abouttitle">Nosotros <br />Somos</h2>
+	    <h2 class="sectiontitle abouttitle">¡Nosotros somos!</h2>
             <p class="aboutdescription">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+	    	La companía con la mayor variedad de software para usted ¡Contacte a TCERServer!
             </p>
-            <a href="#" class="button"> adipisicing </a>
+            <a href="#" class="button"> Contactar </a>
           </div>
         </div>
       </section>
 
       <!--PRODUCTS-->
       <section class="section product" id="product">
-        <h2 class="sectiontitle">Productos</h2>
+        <h2 class="sectiontitle">Futuros proyectos</h2>
 
         <div class="productcontainer container grid">
           <div class="productcontent">
             <img src="img/productos1.png" alt="" class="productimg" />
-            <h3 class="producttitle">Lorem</h3>
-            <span class="productsubtitle">Lorem</span>
+            <h3 class="producttitle">Infraestructura</h3>
+            <span class="productsubtitle">Cree una infraestructura con nuestros servidores.</span>
             <span class="productprice">$1000</span>
             <button class="button productbutton">
               <i class="bx bx-cart-alt producticon"></i>
@@ -148,8 +147,8 @@
           </div>
           <div class="productcontent">
             <img src="img/productos2.png" alt="" class="productimg" />
-            <h3 class="producttitle">Lorem</h3>
-            <span class="productsubtitle">Lorem</span>
+            <h3 class="producttitle">Ecosistema</h3>
+            <span class="productsubtitle">Todo en TCER Server está conectado...</span>
             <span class="productprice">$1000</span>
             <button class="button productbutton">
               <i class="bx bx-cart-alt producticon"></i>
@@ -157,8 +156,8 @@
           </div>
           <div class="productcontent">
             <img src="img/productos3.png" alt="" class="productimg" />
-            <h3 class="producttitle">Lorem</h3>
-            <span class="productsubtitle">Lorem</span>
+            <h3 class="producttitle">Servidores</h3>
+            <span class="productsubtitle">Servidores empresariales para su negocio.</span>
             <span class="productprice">$1000</span>
             <button class="button productbutton">
               <i class="bx bx-cart-alt producticon"></i>
@@ -166,8 +165,8 @@
           </div>
           <div class="productcontent">
             <img src="img/productos4.png" alt="" class="productimg" />
-            <h3 class="producttitle">Lorem</h3>
-            <span class="productsubtitle">Lorem</span>
+            <h3 class="producttitle">Hosting</h3>
+            <span class="productsubtitle">Hosting para sus aplicaciones.</span>
             <span class="productprice">$1000</span>
             <button class="button productbutton">
               <i class="bx bx-cart-alt producticon"></i>
@@ -175,8 +174,8 @@
           </div>
           <div class="productcontent">
             <img src="img/productos5.png" alt="" class="productimg" />
-            <h3 class="producttitle">Lorem</h3>
-            <span class="productsubtitle">Lorem</span>
+            <h3 class="producttitle">Ciencia de datos</h3>
+            <span class="productsubtitle">Ciencia de datos para su empresa.</span>
             <span class="productprice">$1000</span>
             <button class="button productbutton">
               <i class="bx bx-cart-alt producticon"></i>
@@ -184,8 +183,8 @@
           </div>
           <div class="productcontent">
             <img src="img/productos6.png" alt="" class="productimg" />
-            <h3 class="producttitle">Lorem</h3>
-            <span class="productsubtitle">Lorem</span>
+            <h3 class="producttitle">Ciberseguridad</h3>
+            <span class="productsubtitle">Herramientas de ciberseguridad física y digital.</span>
             <span class="productprice">$1000</span>
             <button class="button productbutton">
               <i class="bx bx-cart-alt producticon"></i>
@@ -198,7 +197,7 @@
       <section class="section discount">
         <div class="discountcontainer container grid">
           <div class="discountdata">
-            <h2 class="discounttitle">80% Descuento <br />Productos</h2>
+		  <h2 class="discounttitle">25% Descuento en <br> nuestros Productos</h2>
             <a href="#" class="button">Vamos</a>
           </div>
           <img src="img/discount-img.png" alt="" class="discountimg" />
@@ -213,10 +212,10 @@
           <div class="swiper new-swiper">
             <div class="swiper-wrapper">
               <div class="newcontent swiper-slide">
-                <div class="newtag">Nuvo</div>
+                <div class="newtag">Nuevo</div>
                 <img src="img/productos4.png" alt="" class="newimg" />
-                <h3 class="newtitle">Lorem</h3>
-                <span class="newsubtitle">lorem</span>
+                <h3 class="newtitle">Proximamente...</h3>
+                <span class="newsubtitle">Estamos trabajando en ello.</span>
                 <div class="newprices">
                   <span class="newprice">$1510</span>
                   <span class="newdiscount">$1810</span>
@@ -226,10 +225,10 @@
                 </div>
               </div>
               <div class="newcontent swiper-slide">
-                <div class="newtag">Nuvo</div>
+                <div class="newtag">Nuevo</div>
                 <img src="img/productos2.png" alt="" class="newimg" />
-                <h3 class="newtitle">Lorem</h3>
-                <span class="newsubtitle">lorem</span>
+                <h3 class="newtitle">Proximamente...</h3>
+                <span class="newsubtitle">Estamos trabajando en ello.</span>
                 <div class="newprices">
                   <span class="newprice">$1510</span>
                   <span class="newdiscount">$1810</span>
@@ -240,10 +239,10 @@
               </div>
 
               <div class="newcontent swiper-slide">
-                <div class="newtag">Nuvo</div>
+                <div class="newtag">Nuevo</div>
                 <img src="img/productos3.png" alt="" class="newimg" />
-                <h3 class="newtitle">Lorem</h3>
-                <span class="newsubtitle">lorem</span>
+                <h3 class="newtitle">Proximamente...</h3>
+                <span class="newsubtitle">Estamos trabajando en ello.</span>
                 <div class="newprices">
                   <span class="newprice">$1510</span>
                   <span class="newdiscount">$1810</span>
@@ -262,7 +261,7 @@
       <section class="section newsletter">
         <div class="newslc container">
           <h2 class="sectiontitle">Noticias</h2>
-          <p class="newsld">Lorem, ipsum dolor sit amet</p>
+          <p class="newsld">Reciba noticias sobre novedades y nuevos productos</p>
           <form action="" class="newslf">
             <input type="text" placeholder="Correo" class="newslin" />
             <button class="button2">Subscribete</button>
@@ -276,13 +275,11 @@
         <div class="footercontent">
           <a href="#" class="footerL">
             <img src="img/favicon.png" alt="" class="footerL-img" />
-            Lorem lorem
+            TCER Server
           </a>
 
           <p class="footerdescription">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            accusantium! Voluptates officiis, <br />
-            quae odit totam unde provident!
+            TCER Server es una compañia dominicana.<br />
           </p>
 
           <div class="footersocial">
@@ -299,22 +296,28 @@
         </div>
 
         <div class="footercontent">
-          <h3 class="footertitle">Servicios</h3>
+	  <h3 class="footertitle">Indice</h3>
           <ul class="footerlinks">
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#home" class="footerlink">Inicio</a>
             </li>
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#about" class="footerlink">Nosotros</a>
             </li>
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#product" class="footerlink">Proximamente</a>
+            </li>
+            <li>
+              <a href="#new" class="footerlink">Nuevos</a>
+            </li>
+            <li>
+              <a href="#" class="footerlink">Soporte</a>
             </li>
           </ul>
         </div>
 
         <div class="footercontent">
-          <h3 class="footertitle">Nosotros</h3>
+          <h3 class="footertitle">Servicios</h3>
           <ul class="footerlinks">
             <li>
               <a href="#" class="footerlink">lorem</a>
