Primary sections added.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Reponsive web</title>
+    <title>TCER Server - Inicio</title>
   </head>
   <body>
     <!--Header-->
@@ -69,7 +69,7 @@
 			cloud computing, redes y software para varios sectores.
                   </p>
                   <div class="homebut">
-                    <a href="#" class="button">Servicios</a>
+                    <a href="#category" class="button">Servicios</a>
                     <a href="#product" class="button">Productos</a>
                   </div>
                 </div>
@@ -84,7 +84,7 @@
       </section>
 
       <!--CATEGORY-->
-      <section class="section category">
+      <section class="section category" id="category">
         <h2 class="sectiontitle">
           Las mejores <br />
           Categorías
@@ -194,7 +194,7 @@
       </section>
 
       <!--DESCUENTO-->
-      <section class="section discount">
+      <section class="section discount" id="discount">
         <div class="discountcontainer container grid">
           <div class="discountdata">
 		  <h2 class="discounttitle">25% Descuento en <br> nuestros Productos</h2>
@@ -286,7 +286,7 @@
             <a href="#" target="_blank" class="footersocial-link">
               <i class="bx bxl-facebook"></i>
             </a>
-            <a href="#" target="_blank" class="footersocial-link">
+            <a href="https://www.instagram.com/tcer_server/" target="_blank" class="footersocial-link">
               <i class="bx bxl-instagram-alt"></i>
             </a>
             <a href="#" target="_blank" class="footersocial-link">
@@ -320,13 +320,13 @@
           <h3 class="footertitle">Servicios</h3>
           <ul class="footerlinks">
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#product" class="footerlink">Futuros proyectos</a>
             </li>
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#discount" class="footerlink">Descuentos</a>
             </li>
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#new" class="footerlink">Nuevos productos</a>
             </li>
           </ul>
         </div>
@@ -334,19 +334,19 @@
           <h3 class="footertitle">Nosotros</h3>
           <ul class="footerlinks">
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="https://tcer.com.do" target="_blank" class="footerlink">TCER</a>
             </li>
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#" class="footerlink">TCER Square</a>
             </li>
             <li>
-              <a href="#" class="footerlink">lorem</a>
+              <a href="#" class="footerlink">TCER Places</a>
             </li>
           </ul>
         </div>
       </div>
 
-      <span class="footercopy">lorem</span>
+      <span class="footercopy">© TCER Server 2022-2023</span>
     </footer>
 
     <!--FOOTER-->
