--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </section>
 
       <!--CATEGORY-->
-      <section class="section category" id="category">
+      <section class="section category">
         <h2 class="sectiontitle">
           Las mejores <br />
           Categorías
@@ -260,12 +260,9 @@
 
       <section class="section newsletter">
         <div class="newslc container">
-          <h2 class="sectiontitle">Noticias</h2>
-          <p class="newsld">Reciba noticias sobre novedades y nuevos productos</p>
-          <form action="" class="newslf">
-            <input type="text" placeholder="Correo" class="newslin" />
-            <button class="button2">Subscribete</button>
-          </form>
+          <h2 class="sectiontitle">Contactarnos</h2>
+          <p class="newsld">Contacte con TCER Server.</p>
+	  <button class="button2"><a href="mailto:info@tcer.com" style="color: white">Subscribete</a></button>
         </div>
       </section>
     </main>
