--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="newslc container">
           <h2 class="sectiontitle">Contactarnos</h2>
           <p class="newsld">Contacte con TCER Server.</p>
-	  <button class="button2"><a href="mailto:info@tcer.com" style="color: white">Subscribete</a></button>
+	  <button class="button2"><a href="mailto:info@tcer.com.do" style="color: white">Subscribete</a></button>
         </div>
       </section>
     </main>
