--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="aboutdata">
 	    <h2 class="sectiontitle abouttitle">¡Nosotros somos!</h2>
             <p class="aboutdescription">
-	    	La companía con la mayor variedad de software para usted ¡Contacte a TCERServer!
+	    	La startup con la mayor variedad de software para usted ¡Contacte a TCERServer!
             </p>
             <a href="#" class="button"> Contactar </a>
           </div>
@@ -276,7 +276,7 @@
           </a>
 
           <p class="footerdescription">
-            TCER Server es una compañia dominicana.<br />
+            TCER Server es una startup dominicana.<br />
           </p>
 
           <div class="footersocial">
@@ -343,7 +343,7 @@
         </div>
       </div>
 
-      <span class="footercopy">© TCER Server 2022-2023</span>
+      <span class="footercopy">© TCER Server 2023</span>
     </footer>
 
     <!--FOOTER-->
